--- a/main.tex
+++ b/main.tex
@@ -71,6 +71,7 @@
 % BlockDiagram Drawing Package
 \usepackage{tikz}
 \usetikzlibrary{positioning}
+\usetikzlibrary{external} % used for faster compilation times.
 \usepackage{pgfplots}
 % \usetikzlibrary[pgfplots.groupplots]
 \usepgfplotslibrary{groupplots}
@@ -507,9 +508,9 @@ literate={ϵ}{$\epsilon$}1
 \include{lesson1}
 \include{lesson2}
 \include{lesson3}
-\part{Semester II}
+% \part{Semester II}
 % \include{lesson4}
-\include{lesson5}
+% \include{lesson5}
 % \include{lesson6}
 % \include{lesson7}
 % \include{lesson8}
