--- a/references.bib
+++ b/references.bib
@@ -34,6 +34,13 @@
   publisher={Julius O. Smith}
 }
 
+@BOOK{PASPWEB2010,
+  AUTHOR = "Julius O. Smith",
+  TITLE = "Physical Audio Signal Processing",
+  url = "http://ccrma.stanford.edu/~jos/pasp/",
+  YEAR = "accessed 2025",
+  NOTE = "online book, 2010 edition"
+}
 @article{liski2019converting,
   title={Converting series biquad filters into delayed parallel form: Application to graphic equalizers},
   author={Liski, Juho and Bank, Bal{\'a}zs and Smith, Julius O and V{\"a}lim{\"a}ki, Vesa},
@@ -105,5 +112,38 @@
   title={Introduction to linear algebra},
   author={Strang, Gilbert},
   year={2022},
+  publisher={SIAM}
+}
+
+@book{bilbao2009numerical,
+  title={Numerical sound synthesis: finite difference schemes and simulation in musical acoustics},
+  author={Bilbao, Stefan},
+  year={2009},
+  publisher={John Wiley \& Sons}
+}
+
+@inproceedings{exarchos2011sieve,
+  title={Sieve analysis and construction: Theory and implementation},
+  author={Exarchos, Dimitris and Jones, Daniel},
+  booktitle={Xenakis International Symposium},
+  year={2011},
+  howpublished="\url{https://research.gold.ac.uk/id/eprint/15753/1/11.2-Dimitris-Exarchos-&-Daniel-Jones.pdf}"
+}
+
+@article{ariza2005xenakis,
+  title={The Xenakis sieve as object: a new model and a complete implementation},
+  author={Ariza, Christopher},
+  journal={Computer Music Journal},
+  volume={29},
+  number={2},
+  pages={40--60},
+  year={2005},
+  publisher={JSTOR}
+}
+
+@book{strang2020linear,
+  title={Linear algebra for everyone},
+  author={Strang, Gilbert},
+  year={2020},
   publisher={SIAM}
 }
